# Craftmjne

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json
.claude/hooks/: session-start.sh
.github/workflows/: auto-tag.yml  release.yml
blocks/: bedrock.json  bricks.json  coal_ore.json  cobblestone.json  dirt.json  glass.json  grass.json  gravel.json  iron_ore.json  leaves.json  log.json  planks.json  sand.json  snow.json  stone.json  water.json
electron/: main.cjs  serve.cjs  smoke.cjs
installer/: craftmjne.nsi
src/: atlas.rs  blocks.rs  chat.rs  chunk.wgsl  commands.rs  config.js  config.rs  icons.rs  interact.rs  inventory.rs  lib.rs  main.js  main.rs  menu.rs  mesher.rs  noise.rs  player.rs  render.rs  save.rs  state.rs  terrain.rs  ui.rs  updater.rs  world.rs
src/blocks/: BlockRegistry.js
src/core/: Engine.js  EventBus.js  Input.js
src/mesh/: ChunkMesher.js
src/player/: Interaction.js  Player.js  raycast.js
src/render/: Renderer.js  TextureAtlas.js  painters.js
src/ui/: HUD.js
src/worker/: chunkWorker.js
src/world/: WorkerPool.js  World.js
tests/: headless.rs
textures/blocks/: README.md
