[package]
name = "craftmjne"
version = "0.2.0"
edition = "2021"
description = "A well-optimized, extensible voxel engine / Minecraft-style game framework"
license = "MIT"

[dependencies]
# Audio (bevy_audio), gamepad (bevy_gilrs) and native Wayland features are off
# so the project builds without ALSA/udev/libwayland system headers; add them
# back when you need them ("bevy_audio", "bevy_gilrs", "vorbis", "wayland").
# The X11 backend also covers Wayland desktops via XWayland.
bevy = { version = "0.16", default-features = false, features = [
  "std",
  "async_executor",
  "multi_threaded",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_log",
  "bevy_pbr",
  "bevy_render",
  "bevy_text",
  "bevy_ui",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "tonemapping_luts",
  "x11",
] }
self_update = { version = "0.44.0", default-features = false, features = ["reqwest", "rustls", "archive-zip", "archive-tar", "compression-flate2", "compression-zip-deflate"] }

# Fast iteration: light optimization for our code, full for dependencies.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
